--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,8 @@
 body {
   color: black;
+  background-color: #f2f2f2;
   font-family: Roboto;
   margin: 0;
-  animation-duration: 0.7s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-name: loadAnimation;
 }
 
 @keyframes rotate {
@@ -19,320 +15,418 @@ body {
 }
 @keyframes move {
   to {
-    z-index: -1;
     opacity: 0;
   }
 }
 @keyframes loadAnimation {
   0% {
-    transform: translateY(-100px);
+    transform: translateY(-50px);
     opacity: 0;
+  }
+  50% {
+    transform: translateY(-20px);
+    opacity: 1;
   }
   100% {
     transform: translateY(0);
     opacity: 1;
   }
 }
-@media (min-width: 320px) {
-  .top {
-    display: flex;
-    justify-content: center;
+@keyframes spin {
+  from {
+    transform: rotate(0turn);
   }
-  .top #logo {
-    padding-top: 20px;
-    width: 200px;
+  to {
+    transform: rotate(1turn);
   }
-  nav .menu .sub-heading {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    background-color: rgba(231, 230, 230, 0.74);
+}
+@keyframes fade {
+  0% {
+    opacity: 1;
+    visibility: visible;
   }
-  nav .nav {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: #f6f6f6;
-    text-align: center;
+  50% {
+    opacity: 0;
+    visibility: hidden;
   }
-  nav .nav .purple {
-    background: linear-gradient(#FF79DA, #9356DC);
-    border-radius: 20px;
-    border-top: #FF79DA;
-    border-bottom: #9356DC;
-    border-left: #FF79DA;
-    border-right: #9356DC;
-    width: 200px;
-    height: 40px;
-    align-self: center;
-    margin-bottom: 50px;
+  100% {
+    opacity: 0;
+    visibility: hidden;
   }
-  nav .nav .purple a {
-    color: white;
-    text-decoration: none;
-  }
-  main .How-it-works {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-  }
-  main .How-it-works h2 {
-    padding-left: 20px;
-  }
-  main .How-it-works .nav-2 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    text-align: center;
-  }
-  main .How-it-works .nav-2 .bubble-1 {
-    display: flex;
+}
+.loading-spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: end;
+  background-color: white;
+  animation-duration: 3s;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: fade;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.loading-spinner:after {
+  content: "";
+  width: 150px;
+  height: 150px;
+  margin: auto;
+  line-height: 150px;
+  border-radius: 50%;
+  font-size: 15px;
+  background-color: white;
+  text-align: center;
+  border: 15px solid #9356dc;
+  border-top: 15px solid #FF79DA;
+  opacity: 1;
+  visibility: visible;
+  animation: spin 3s linear infinite;
+}
+
+.top {
+  display: flex;
+  justify-content: center;
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+.top #logo {
+  padding-top: 20px;
+  width: 200px;
+}
+
+nav {
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+nav .menu .sub-heading {
+  display: flex;
+  width: 100%;
+  color: #363636;
+  justify-content: center;
+  background-color: rgba(231, 230, 230, 0.74);
+}
+nav .menu .sub-heading .fa-location-dot {
+  font-size: large;
+  align-self: center;
+  margin-right: 10px;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: #f6f6f6;
+  text-align: center;
+}
+.nav h3 {
+  font-weight: lighter;
+}
+.nav .purple {
+  color: white;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 20px;
+  border-top: #FF79DA;
+  border-bottom: #9356DC;
+  border-left: #FF79DA;
+  border-right: #9356DC;
+  width: 200px;
+  height: 40px;
+  align-self: center;
+  margin-bottom: 50px;
+}
+.nav .purple a {
+  color: white;
+  text-decoration: none;
+}
+
+main .How-it-works {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+main .How-it-works h2 {
+  text-align: center;
+}
+main .How-it-works .nav-2 {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  text-align: center;
+}
+main .How-it-works .nav-2 .button {
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 20px;
+  width: 700px;
+  height: 50px;
+  color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+main .How-it-works .nav-2 .button:hover {
+  background-color: #eae3f3;
+}
+main .How-it-works .nav-2 .circle {
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: #9356DC;
+  border: 2px solid #9356DC;
+  margin-top: 15px;
+  padding-top: 5px;
+  padding-left: 2.5px;
+  padding-right: 2.5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  align-self: center;
+  position: absolute;
+}
+main .How-it-works .nav-2 .fa-mobile-screen-button {
+  align-self: center;
+  margin-right: 10px;
+}
+main .How-it-works .nav-2 h4 {
+  margin-top: 15px;
+}
+main .How-it-works .nav-2 .circle {
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: #9356DC;
+  border: 2px solid #9356DC;
+  margin-top: 15px;
+  padding-top: 5px;
+  padding-left: 2.5px;
+  padding-right: 2.5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  align-self: center;
+  position: absolute;
+}
+main .How-it-works .nav-2 .fa-list {
+  align-self: center;
+  margin-right: 10px;
+}
+main .How-it-works .nav-2 h4 {
+  margin-top: 15px;
+}
+main .How-it-works .nav-2 .circle {
+  display: flex;
+  justify-content: center;
+  color: white;
+  background-color: #9356DC;
+  border: 2px solid #9356DC;
+  margin-top: 15px;
+  padding-top: 5px;
+  padding-left: 2.5px;
+  padding-right: 2.5px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  align-self: center;
+  position: absolute;
+}
+main .How-it-works .nav-2 .fa-store {
+  align-self: center;
+  margin-right: 10px;
+}
+main .How-it-works .nav-2 h4 {
+  margin-top: 15px;
+}
+
+.Restaurants {
+  background-color: #f2f2f2;
+  padding: 3%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  width: 94%;
+  flex: 1;
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+.Restaurants .rest-col {
+  width: 95%;
+  height: 220px;
+  margin-left: 30px;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  margin-bottom: 3%;
+  align-items: flex-end;
+  position: relative;
+}
+.Restaurants .rest-col a {
+  text-decoration: none;
+  color: black;
+}
+.Restaurants .rest-col a .new {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  margin-top: 4px;
+  margin-left: 800px;
+  margin-bottom: 0px;
+  color: #4ca58f;
+  background-color: #99e2d0;
+  position: absolute;
+  right: 0.5%;
+}
+.Restaurants .rest-col img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 70%;
+  width: 100%;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+}
+.Restaurants .rest-col .rest-detail {
+  padding: 5%;
+  padding-top: 0%;
+  padding-bottom: 0px;
+  line-height: 5px;
+}
+.Restaurants .rest-col .rest-detail .heart {
+  fill: transparent;
+  stroke: black;
+  stroke-width: 20px;
+  -moz-text-align-last: end;
+       text-align-last: end;
+  font-size: x-large;
+  position: relative;
+  bottom: 50px;
+}
+.Restaurants .rest-col .rest-detail .heart :hover,
+.Restaurants .rest-col .rest-detail .heart :active {
+  cursor: pointer;
+  animation: opacity 0.4s ease-in forwards;
+  fill: url(#Gradient-2);
+  stroke: transparent;
+}
+.Restaurants .rest-col .rest-detail .heart :hover #Gradient-2 .stop-1,
+.Restaurants .rest-col .rest-detail .heart :active #Gradient-2 .stop-1 {
+  stop-color: #9356DC;
+}
+.Restaurants .rest-col .rest-detail .heart :hover #Gradient-2 .stop-2,
+.Restaurants .rest-col .rest-detail .heart :active #Gradient-2 .stop-2 {
+  stop-color: #FF79DA;
+  stop-opacity: 0;
+}
+.Restaurants .rest-col .rest-detail .heart :hover #Gradient-2 .stop-3,
+.Restaurants .rest-col .rest-detail .heart :active #Gradient-2 .stop-3 {
+  stop-color: #9356DC;
+}
+
+footer {
+  background-color: #363636;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  margin-top: 2%;
+  width: 100%;
+  background-color: #363636;
+  animation-duration: 4s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+footer h2 {
+  color: white;
+  font-family: "Shrikhand", cursive;
+  padding: 1%;
+  font-weight: 300;
+  margin-left: 15px;
+  cursor: pointer;
+}
+footer ul {
+  list-style: none;
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 2%;
+  padding-top: 1%;
+  margin-bottom: 0px;
+}
+footer ul li {
+  margin: 5px;
+}
+footer ul li a {
+  text-decoration: none;
+  color: white;
+  margin-top: 10px;
+}
+footer ul li a:hover {
+  color: wheat;
+}
+footer ul i {
+  margin-right: 6px;
+}
+
+.top-btn {
+  color: #9356DC;
+}
+
+@media (max-width: 768px) {
+  main .How-it-works .nav-2 .button {
     width: 280px;
-    height: 50px;
-    border-radius: 20px;
-    padding-left: 20px;
-    background-color: #f2f2f2;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
   }
-  main .How-it-works .nav-2 .bubble-1 .circle {
-    color: white;
-    background-color: #9356DC;
-    border: 2px solid #9356DC;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    align-self: center;
-    position: absolute;
+  main .How-it-works .nav-2 .button:hover {
+    background-color: rgba(235, 224, 247, 0.952);
+  }
+  main .How-it-works .nav-2 .circle {
     left: 25px;
   }
-  main .How-it-works .nav-2 .bubble-1 .fa-mobile-screen-button {
-    align-self: center;
-    margin-right: 10px;
-  }
-  main .How-it-works .nav-2 .bubble-1 h4 {
-    margin-top: 15px;
-  }
-  main .How-it-works .nav-2 .bubble-2 {
-    display: flex;
-    width: 280px;
-    height: 50px;
-    border-radius: 20px;
-    padding-left: 20px;
-    background-color: #f2f2f2;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-  }
-  main .How-it-works .nav-2 .bubble-2 .circle {
-    color: white;
-    background-color: #9356DC;
-    border: 2px solid #9356DC;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    align-self: center;
-    position: absolute;
+  main .How-it-works .nav-2 .circle {
     left: 25px;
   }
-  main .How-it-works .nav-2 .bubble-2 .fa-list {
-    align-self: center;
-    margin-right: 10px;
-  }
-  main .How-it-works .nav-2 .bubble-2 h4 {
-    margin-top: 15px;
-  }
-  main .How-it-works .nav-2 .bubble-3 {
-    display: flex;
-    width: 280px;
-    height: 50px;
-    border-radius: 20px;
-    padding-left: 20px;
-    background-color: #f2f2f2;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-  }
-  main .How-it-works .nav-2 .bubble-3 .circle {
-    color: white;
-    background-color: #9356DC;
-    border: 2px solid #9356DC;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    align-self: center;
-    position: absolute;
+  main .How-it-works .nav-2 .circle {
     left: 25px;
-  }
-  main .How-it-works .nav-2 .bubble-3 .fa-store {
-    align-self: center;
-    margin-right: 10px;
-  }
-  main .How-it-works .nav-2 .bubble-3 h4 {
-    margin-top: 15px;
-  }
-  .Restaurants {
-    background-color: #f2f2f2;
-    padding: 3%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    width: 94%;
-    flex: 1;
   }
   .Restaurants .rest-col {
-    width: 95%;
-    height: 250px;
     margin-left: 8px;
-    background-color: white;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    margin-bottom: 3%;
-    align-items: flex-end;
-    position: relative;
-  }
-  .Restaurants .rest-col a {
-    text-decoration: none;
-    color: black;
   }
   .Restaurants .rest-col a .new {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 70px;
-    margin-top: 4px;
     margin-left: 250px;
-    margin-bottom: 0px;
-    color: white;
-    background-color: #99e2d0;
-    position: absolute;
-  }
-  .Restaurants .rest-col img {
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: 65%;
-    width: 100%;
-    border-top-right-radius: 15px;
-    border-top-left-radius: 15px;
-  }
-  .Restaurants .rest-col .rest-detail {
-    padding: 5%;
-    padding-top: 0%;
-    padding-bottom: 0px;
-    line-height: 5px;
   }
   .Restaurants .rest-col .rest-detail .heart {
-    fill: url(#Gradient-2);
-  }
-  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-1 {
-    stop-color: #9356DC;
-  }
-  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-2 {
-    stop-color: #FF79DA;
-    stop-opacity: 0;
-  }
-  .Restaurants .rest-col .rest-detail .heart #Gradient-2 .stop-3 {
-    stop-color: #9356DC;
-  }
-  footer {
-    background-color: #363636;
-    color: white;
-    font-family: "Roboto", sans-serif;
-    margin-top: 2%;
-    width: 100%;
-    width: 100%;
-    background-color: #363636;
-  }
-  footer h2 {
-    color: white;
-    font-family: "Shrikhand", cursive;
-    padding: 1%;
-    font-weight: 300;
-    margin-left: 15px;
-    cursor: pointer;
-  }
-  footer ul {
-    list-style: none;
-    font-family: "Roboto", sans-serif;
-    padding-bottom: 2%;
-    padding-top: 1%;
-  }
-  footer ul li {
-    margin: 5px;
-  }
-  footer ul li a {
-    text-decoration: none;
-    color: white;
-    margin-top: 10px;
-  }
-  footer ul li a:hover {
-    color: wheat;
-  }
-  footer ul i {
-    margin-right: 6px;
-  }
-  .food-details {
-    box-sizing: border-box;
-    height: 100px;
-    width: 350px;
-    border-radius: 15px;
-    background-color: white;
-    box-shadow: 0px 5px 10px #C0C0C0;
-    align-items: center;
-    display: flex;
-    padding-left: 1.5em;
-    cursor: pointer;
-    list-style: none;
-    font-family: "Roboto", sans-serif;
-    margin-bottom: 2%;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-    animation-name: loadAnimation;
-  }
-  .food-details li span {
-    font-weight: lighter;
-    font-size: 0.8em;
-  }
-  .food-details li:nth-child(1) {
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-    flex: 1 1 auto;
-    min-width: 0;
-    font-size: large;
-  }
-  .food-details li:nth-child(2) {
-    font-weight: bold;
-    width: 70px;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-  }
-  .food-details li:nth-child(3) {
-    width: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 0px;
-    height: 100%;
-    color: transparent;
-    background-color: #99e2d0;
-    transition: all 0.1s;
-  }
-  .food-details li:nth-child(3) i {
-    font-size: 1.5em;
-  }
-  .food-details:hover > li:nth-child(3) {
-    max-width: 100px;
-    color: white;
-    border-radius: 0 15px 15px 0px;
-  }
-  .food-details:hover > li:nth-child(3) i {
-    animation: rotate 360;
-    animation: spin 0.4s;
-    transform: rotateZ(360deg);
-    transition: 1s;
+    fill: transparent;
+    stroke: black;
+    stroke-width: 20px;
+    -moz-text-align-last: end;
+         text-align-last: end;
+    font-size: x-large;
+    position: relative;
+    bottom: 50px;
   }
 }/*# sourceMappingURL=main.css.map */
