--- a/styles/menu.css
+++ b/styles/menu.css
@@ -2,11 +2,6 @@ body {
   color: black;
   font-family: Roboto;
   margin: 0;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-name: loadAnimation;
 }
 
 @keyframes rotate {
@@ -33,10 +28,58 @@ body {
     opacity: 1;
   }
 }
+.top {
+  display: flex;
+  justify-content: center;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+.top a {
+  text-decoration: none;
+  color: black;
+  align-self: center;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+}
+.top a .fa-arrow-left {
+  color: black;
+  font-size: x-large;
+}
+.top #logo {
+  padding-top: 20px;
+  width: 200px;
+}
+
 .background {
   display: flex;
   flex-direction: column;
   background-color: #f6f6f6;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+.background .menu-title {
+  margin-left: 20px;
+}
+.background .menu-title h3 {
+  font-weight: normal;
+}
+.background #image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 400px;
+}
+.background #image-2 {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 300px;
 }
 .background .restaurant-name {
   display: flex;
@@ -48,25 +91,30 @@ body {
 }
 .background .restaurant-name h2 {
   padding-left: 20px;
+  font-family: Shrikhand;
+  font-size: xx-large;
+  margin-bottom: 0px;
+  text-align: center;
 }
 .background .restaurant-name h3 {
   margin-left: 20px;
   font-weight: normal;
-}
-.background .restaurant-name #image {
-  width: 100%;
+  margin-top: 0px;
 }
 .background .restaurant-name .hearts {
   position: absolute;
-  right: 20px;
+  bottom: -5px;
+  right: 30px;
   fill: transparent;
   stroke: black;
+  stroke-width: 20px;
 }
 .background .restaurant-name .hearts :hover,
 .background .restaurant-name .hearts :active {
   cursor: pointer;
   animation: opacity 0.4s ease-in forwards;
   fill: url(#Gradient-2);
+  stroke: transparent;
 }
 .background .restaurant-name .hearts :hover #Gradient-2 .stop-1,
 .background .restaurant-name .hearts :active #Gradient-2 .stop-1 {
@@ -81,33 +129,134 @@ body {
 .background .restaurant-name .hearts :active #Gradient-2 .stop-3 {
   stop-color: #9356DC;
 }
-.background .food-card {
+.background .nav-3 {
+  margin-left: 15px;
+  align-self: center;
+  width: 90%;
+}
+.background .nav-3 .food-card {
   width: 100%;
 }
-.background .food-card .food-details {
-  width: 92%;
-  margin-left: 15px;
+.background .purple-2 {
+  color: white;
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 20px;
+  border-top: #FF79DA;
+  border-bottom: #9356DC;
+  border-left: #FF79DA;
+  border-right: #9356DC;
+  width: 200px;
+  height: 40px;
+  align-self: center;
+  margin-top: 10px;
+  margin-left: 500px;
+}
+.background .purple-2 a {
+  color: white;
+  text-decoration: none;
 }
 
-@media (min-width: 320px) {
-  .top {
-    display: flex;
-    justify-content: center;
+.food-details {
+  box-sizing: border-box;
+  height: 100px;
+  border-radius: 15px;
+  background-color: white;
+  box-shadow: 0px 5px 10px #C0C0C0;
+  align-items: center;
+  display: flex;
+  padding-left: 1.5em;
+  cursor: pointer;
+  list-style: none;
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 2%;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+.food-details li span {
+  font-weight: lighter;
+  font-size: 0.8em;
+}
+.food-details li:nth-child(1) {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  flex: 1 1 auto;
+  min-width: 0;
+  font-size: large;
+}
+.food-details li:nth-child(2) {
+  font-weight: bold;
+  width: 70px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+}
+.food-details li:nth-child(3) {
+  width: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 0px;
+  height: 100%;
+  color: transparent;
+  background-color: #99e2d0;
+  transition: all 0.1s;
+}
+.food-details li:nth-child(3) i {
+  font-size: 1.5em;
+}
+.food-details:hover > li:nth-child(3) {
+  max-width: 100px;
+  color: white;
+  border-radius: 0 15px 15px 0px;
+}
+.food-details:hover > li:nth-child(3) i {
+  animation: rotate 360;
+  animation: spin 0.4s;
+  transform: rotateZ(360deg);
+  transition: 1.5s;
+}
+
+footer {
+  background-color: #363636;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  margin-top: 2%;
+  width: 100%;
+  background-color: #363636;
+  animation-duration: 2s;
+  animation-timing-function: ease-in;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-name: loadAnimation;
+}
+
+@media screen and (max-width: 992px) and (min-width: 768px) {
+  .background .purple-2 {
+    margin-left: 310px;
   }
-  .top a {
-    text-decoration: none;
-    color: black;
-    align-self: center;
-    position: absolute;
-    left: 20px;
-    top: 20px;
+}
+@media (max-width: 768px) {
+  .background #image {
+    height: auto;
   }
-  .top a .fa-arrow-left {
-    color: black;
-    font-size: x-large;
+  .background #image-2 {
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 300px;
   }
-  .top #logo {
-    padding-top: 20px;
-    width: 200px;
+  .background .restaurant-name h2 {
+    text-align: left;
+  }
+  .background .nav-3 {
+    align-self: auto;
+    width: auto;
+  }
+  .background .purple-2 {
+    margin-left: 85px;
+  }
+  .food-details {
+    width: 350px;
   }
 }/*# sourceMappingURL=menu.css.map */
